[package]
name = "oxide_pong"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.1"
iyes_perf_ui = "0.3.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
